test/fixtures/type-error/noOverloadQty.ro
type int = ???
type float = ???

fun x(): int = 1
fun x(a: int): int = 1

export fun x(a: float): int = x(1.0, 1, 2)
